--- a/angular.json
+++ b/angular.json
@@ -71,7 +71,9 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ng-fundamentals:build"
+            "browserTarget": "ng-fundamentals:build",
+            "host": "0.0.0.0",
+            "port": 4210
           },
           "configurations": {
             "production": {
