--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --live-reload --verbose",
+    "start": "ng serve --poll=1000 --live-reload --verbose",
     "build": "ng build --source-map=false",
     "test": "ng test",
     "lint": "ng lint",
